Fix footer responsiveness
- the license text overlaps status
- show status link even on smaller resolutions
- simplify css

--- a/weblate_web/static/style.css
+++ b/weblate_web/static/style.css
@@ -2600,17 +2600,18 @@ footer .footer-right {
 	.article .img img {height: auto;}
 	.article .img {float: left;}
     .img-widget {display: none;}
+	footer .footer-center {position: static;}
+    footer .footer-center, footer .footer-left, footer .footer-right {width: 100%; text-align: center;max-width: 100%; margin-bottom: 25px;}
 }
 @media (max-width: 790px) {
 	.main-box {min-height: inherit; background-size: auto 100%; padding-bottom: 75px;}
 	.countries .half-text, .countries .half-translations {max-width: 100%; margin-left: 0;}
-	.half, section.bottom .box, footer .footer-left, footer .footer-right {width: 100%;}
-	footer a.service-status, .quick-installation a.button {display: none;}
+	.half, section.bottom .box {width: 100%;}
+	.quick-installation a.button {display: none;}
 	.countries .half-text {padding-bottom: 55px;}
 	.rewards .reward .title {font-size: 18px; line-height: 24px;}
 	.rewards .reward p {font-size: 16px;}
-	footer .footer-left, footer .footer-right {text-align: center;}
-	section.bottom .box, footer .footer-left {max-width: 100%; margin-left: 0; margin-bottom: 25px;}
+	section.bottom .box {max-width: 100%; margin-left: 0; margin-bottom: 25px;}
 	.currency .line-left, .currency .line-right {width: 100%;}
 	.currency .line .line-left {padding-left: 0; margin-bottom: 10px;}
 }
